
syntax = "proto3";

package test;

option go_package = "/gen";

service UserService {
  rpc GetById(GetByIdReq) returns (GetByIdResp);
}

message GetByIdReq {
  uint64 id =1;
}

message GetByIdResp {
  User user = 1;
}

message User {
  uint64 id = 1;
  uint32 status = 2;
}